# effigy-protobuf.cr

./: README.md
cmake/Modules/: FindProtobufC.cmake
proto/s2/: s2_te.proto
script/: 01-tweak_uncompiled_definitions.sh  02-compile_definitions.sh  03-tweak_compiled_definitions.sh
src/: CMakeLists.txt
src/libeffigywire/: CMakeLists.txt
src/libeffigywire/include/libeffigywire/: demo.pb-c.h  dota_commonmessages.pb-c.h  dota_modifiers.pb-c.h  dota_usermessages.pb-c.h  netmessages.pb-c.h  networkbasetypes.pb-c.h  s2_base_gcmessages.pb-c.h  s2_dota_gcmessages_common.pb-c.h  s2_dota_match_metadata.pb-c.h  s2_dota_usermessages.pb-c.h  s2_gameevents.pb-c.h  s2_netmessages.pb-c.h  s2_te.pb-c.h  s2_usermessages.pb-c.h
src/libeffigywire/src/: demo.pb-c.c  dota_commonmessages.pb-c.c  dota_modifiers.pb-c.c  dota_usermessages.pb-c.c  netmessages.pb-c.c  networkbasetypes.pb-c.c  s2_base_gcmessages.pb-c.c  s2_dota_gcmessages_common.pb-c.c  s2_dota_match_metadata.pb-c.c  s2_dota_usermessages.pb-c.c  s2_gameevents.pb-c.c  s2_netmessages.pb-c.c  s2_te.pb-c.c  s2_usermessages.pb-c.c
